# ObjSynth

./: .gitignore  Makefile.am  autogen.sh  configure.ac
examples/: Makefile.am  randomNotes.m  singleNote.m
examples/player/: Makefile.am  player.m  soundfont.sf2
include/: Makefile.am
src/: Makefile.am  ObjSynth.m  player.m
src/ObjSynth/: Makefile.am  ObjSynth.h  ObjSynth.m  ObjSynthAudioDriver.h  ObjSynthAudioDriver.m  ObjSynthPlayer.h  ObjSynthPlayer.m  ObjSynthSettings.h  ObjSynthSettings.m  ObjSynthSynthesizer.h  ObjSynthSynthesizer.m
