noinst_PROGRAMS = player singleNote randomNotes

player_SOURCES = player.m
player_CPPFLAGS = -I$(top_srcdir)/include
player_LDADD = ../src/libObjSynth.la

singleNote_SOURCES = singleNote.m
singleNote_CPPFLAGS = -I$(top_srcdir)/include
singleNote_LDADD = ../src/libObjSynth.la

randomNotes_SOURCES = randomNotes.m
randomNotes_CPPFLAGS = -I$(top_srcdir)/include
randomNotes_LDADD = ../src/libObjSynth.la
